--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -4,7 +4,7 @@ html {
   @media (prefers-color-scheme: light) {
     &:not([data-mode]),
     &[data-mode='light'] {
-      @include light-scheme;
+      @include dark-scheme;
     }
 
     &[data-mode='dark'] {
