--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -2,7 +2,7 @@
  * The main dark mode styles
  */
 
-@mixin dark-scheme {
+ @mixin dark-scheme {
   /* Framework color */
   --main-bg: rgb(27, 27, 30);
   --mask-bg: rgb(68, 69, 70);
@@ -100,8 +100,11 @@
   --timeline-color: rgb(63, 65, 68);
   --timeline-year-dot-color: var(--timeline-color);
 
-  .light {
-    display: none;
+  color-scheme: dark-scheme;
+
+  /* stylelint-disable-next-line selector-id-pattern */
+  #disqus_thread {
+    color-scheme: none;
   }
 
   /* categories */
@@ -127,6 +130,11 @@
     }
   }
 
+  /* Move declarations above the nested rule */
+  --categories-border: rgb(64, 66, 69, 0.5);
+  --categories-hover-bg: rgb(73, 75, 76);
+  --categories-icon-hover-color: white;
+
   #archives li:nth-child(odd) {
     background-image: linear-gradient(
       to left,
@@ -138,10 +146,8 @@
     );
   }
 
-  color-scheme: dark;
-
-  /* stylelint-disable-next-line selector-id-pattern */
-  #disqus_thread {
-    color-scheme: none;
+  /* Alternatively, wrap in & {} */
+  & {
+    color-scheme: dark-scheme;
   }
 } /* dark-scheme */
