--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -2,7 +2,7 @@
  * The syntax light mode typography colors
  */
 
-@mixin light-scheme {
+ @mixin light-scheme {
   /* Framework color */
   --main-bg: white;
   --mask-bg: #c1c3c5;
@@ -109,4 +109,18 @@
   --timeline-color: rgba(0, 0, 0, 0.075);
   --timeline-node-bg: #c2c6cc;
   --timeline-year-dot-color: #ffffff;
+
+  /* Move declarations above the nested rule */
+  --categories-border: rgba(0, 0, 0, 0.125);
+  --categories-hover-bg: var(--btn-border-color);
+  --categories-icon-hover-color: darkslategray;
+
+  .dark {
+    display: none;
+  }
+
+  /* Alternatively, wrap in & {} */
+  & {
+    color-scheme: light-scheme;
+  }
 } /* light-scheme */
